# HPCProgrammingFundamentals

./: .gitignore  CMakeLists.txt  README.md  approximating_pi_in_c.c  approximating_pi_in_c_with_openmp.c  calculating_the_norm_of_a_vector.c  creating_an_array_for_strings_and_chars.c  defining_max_num_threads.c  ejercicio1.c  ejercicio2.c  ejercicio3.c  grafica_ejercicio2.gnu  introducing_parallel_regions.c  operations_with_arrays_pointers_vs_no_pointers.c  ordering_an_array_with_bubble_sort.c  paralelizing_matrix_operations.c  parallelizing_point_product_of_two_vectors_in_c.c  parallelizing_sum_one_to_a_hundred_with_openmp.c  parallelizing_two_and_three_multiplication_tables.c  private_and_shared_variables_control.c  simpson_numeric_method.c  sum_of_parallel_series_using_creer_conditions.c  uniform_rectilinear_motion_in_c.c
